# food-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  config.rs  error.rs  lib.rs
