[package]
name = "food-rs"
version = "0.1.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "Utilities for Rust programming by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/food-rs"
license = "MIT"
keywords = ["utilities"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.14"
bson = "2.4"
ciborium = "0.2"
color-eyre = "0.6"
envy = "0.4"
flexbuffers = "2.0"
json5 = "0.4"
lexpr = "0.2"
postcard = "1.0"
rmp-serde = "1.1"
ron = "0.8"
serde = "1.0"
serde-pickle = "1.1"
serde_derive = "1.0"
serde_dynamo = "4.0"
serde_json = "1.0"
serde_qs = "0.10"
serde_yaml = "0.9"
toml = "0.4"
tracing = "0.1"
zvariant = "3.7"
