[package]
name = "food-rs"
version = "0.1.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "Utilities for Rust programming by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/food-rs"
license = "MIT"
keywords = ["utilities"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "^0"
bson = "^2"
ciborium = "^0"
color-eyre = "^0"
envy = "^0"
flexbuffers = "^2"
json5 = "^0"
lexpr = "^0"
postcard = "^1"
rmp-serde = "^1"
ron = "^0"
serde = "^1"
serde-pickle = "^1"
serde_derive = "^1"
serde_dynamo = "^4"
serde_json = "^1"
serde_qs = "^0"
serde_yaml = "^0"
toml = "^0"
tracing = "^0"
zvariant = "^3"
