[package]
name = "food-rs"
version = "0.1.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "Utilities for Rust programming by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/food-rs"
license = "MIT"
keywords = ["utilities"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "^2"
color-eyre = "^0"
rmp-serde = "^1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_qs = "^0"
serde_yaml = "^0"
toml = "^0"
tracing = "^0"
